<feat>: add ticket inventories

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@alch/alchemy-web3": "^1.4.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "solidity-coverage": "^0.8.2"
   },
   "devDependencies": {
     "hardhat": "^2.11.2"
