--- a/.github/workflows/contract-ci.yaml
+++ b/.github/workflows/contract-ci.yaml
@@ -23,7 +23,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: Test Coverage
-        run: REPORT_GAS=true npx hardhat test
-        # run: npx hardhat coverage --testfiles test/Ticket.js
+        env: # Or as an environment variable
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+        # run: REPORT_GAS=true npx hardhat test
+        run: npx hardhat coverage --testfiles test/Ticket.js
       - name: Linters
         run: solhint 'contracts/**/*.sol'
