<fixCI>: add API_URL into env

--- a/.github/workflows/contract-ci.yaml
+++ b/.github/workflows/contract-ci.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Test Coverage
         env: # Or as an environment variable
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          API_URL: ${{ secrets.API_URL }}
         # run: REPORT_GAS=true npx hardhat test
         run: npx hardhat coverage --testfiles test/Ticket.js
       - name: Linters
