--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "solidity-coverage": "^0.8.2"
   },
   "devDependencies": {
-    "hardhat": "^2.11.2"
+    "hardhat": "^2.11.2",
+    "solhint": "^3.3.7"
   }
 }
