--- a/.github/workflows/contract-ci.yaml
+++ b/.github/workflows/contract-ci.yaml
@@ -29,4 +29,4 @@ jobs:
         # run: REPORT_GAS=true npx hardhat test
         run: npx hardhat coverage --testfiles test/Ticket.js
       - name: Linters
-        run: solhint 'contracts/**/*.sol'
+        run: npx solhint 'contracts/**/*.sol'
